WAL-23 fix alerts z-index

--- a/front/src/app/components/layouts/app/index.less
+++ b/front/src/app/components/layouts/app/index.less
@@ -38,7 +38,6 @@
     border: 1px solid @color-border;
     border-top-width: 0;
     border-bottom-width: 0;
-    position: sticky;
   }
 }
 
